finished html and css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<html>
+    <style>
+    body {
+        background-color: navy;
+        color: white;
+        }
+    </style>
+<h1> Learning Styles Essay Prep </h1>
+<body>
+<p> 
+    Muller and Dweck use two very different theories on how people learn. To start off with Muller's theory, he believes that "just standing there and saying the correct stuff to someone doesn't help them actually learn, they just end up becoming more confident in things they thought beforehand." This shows that his theory states that stimulating critical thinking and rethinking preconceived ideas is the key to growth. The theory implies that stimulation is they key to mental growth because it causes someone to rethink the world around them and better understand how things work.
+</p>
+    
+<p>
+   Carol Dweck, unlike Muller, believes that nuturing is the key way that children learn and become intellectual adults. According to Dweck, there are two mindsets among children: a fixed mindset and a growth mindset. A child with a fixed mindset believes that intelligence is predetermined and that there is no way to further increase overall intelligence. On the contrary, a child with a growth mindset believes that intelligence can increase over time through the process of learning. Teachers are supposed to nurture children with either mindset, but in different ways. With fixed mindset children, teachers must nurture them by focusing on intelligence, while teachers focus on the process and effort with growth mindset children. This shows that these mindsets are very different from one another in the way that the children determine their intellectual ability. With this, Dweck demonstrates how nurturing is the key to how children learn.
+</p>
 
+<p>
+    These two theories from Muller and Dweck show how complex the theory regarding successful education and determining how people learn is. Dweck emphasizes the importance of nurturing, while Muller emphasizes the importance of initiating critical thinking and the rethinking of preconceived ideas. All in all, both theories are credible and demonstrate the different ways people learn.
+</p>
+</body>
+
+</html>
